fix: wrap input with label and move linespace global

--- a/static/stylesheets/style.css
+++ b/static/stylesheets/style.css
@@ -8,6 +8,7 @@ body {
     -webkit-font-smoothing: antialiased;
 
     line-height: 2rem;
+    letter-spacing: 1.33;
 }
 
 a {
